# models

./: AnimalView.qml  CMakeLists.txt  Main.qml  main.cpp  models_application.hpp
application/: read_file.hpp
data/: file_controller.hpp
domain/: animal.hpp
model/: composed_model.hpp  template_vector_items.hpp
model/interface_items/: template_vector_items.hpp
model/template_items/: template_vector_items.hpp
model_factory/: animal_model_factory.hpp
view_model/: animal_view_model.hpp  view_model_factory.hpp
